# aapt-cmake-buildscript

./: CMakeLists.txt  README.md  windows.toolchain.cmake  windows_x86.toolchain.cmake
aapt/: CMakeLists.txt
aapt2/: CMakeLists.txt
aapt2_jni/: CMakeLists.txt
aapt2_static/: CMakeLists.txt
aapt_static/: CMakeLists.txt
androidfw/: CMakeLists.txt
base/: CMakeLists.txt
compiler-rt/: CMakeLists.txt
expat/: CMakeLists.txt
libcutils/: CMakeLists.txt
libcxx/: CMakeLists.txt
libcxxabi/: CMakeLists.txt
liblog/: CMakeLists.txt
libpng/: CMakeLists.txt
libutils/: CMakeLists.txt
libziparchive/: CMakeLists.txt
protobuf/: CMakeLists.txt
protobuf/aprotoc/: CMakeLists.txt
protobuf/libprotobuf-cpp-lite/: CMakeLists.txt
zlib/: CMakeLists.txt
